--- a/dudel/templates/base.html
+++ b/dudel/templates/base.html
@@ -34,19 +34,23 @@
                     <a href="/" class="navbar-brand">Dudel</a>
 
                     <div class="navbar-left visible-sm visible-xs">
-                        <a class="btn navbar-btn btn-sm btn-default" href="https://mafiasi.de" style="margin-top: 10px;">
-                            <i class="fa fa-home"></i> Mafiasi Hub
+                        {% if config.HOME_URL %}
+                        <a class="btn navbar-btn btn-sm btn-default" href="{{ config.HOME_URL }}" style="margin-top: 10px;" target="_blank">
+                            <i class="fa fa-home"></i> {{ config.HOME_TEXT }}
                         </a>
-                    <a class="btn navbar-btn btn-sm btn-default" href="{{ url_for('index') }}" style="margin-top: 10px;">
-                        <i class="fa fa-plus"></i>
-                    </a>
+                        {% endif %}
+                        <a class="btn navbar-btn btn-sm btn-default" href="{{ url_for('index') }}" style="margin-top: 10px;">
+                            <i class="fa fa-plus"></i>
+                        </a>
                     </div>
                 </div>
 
                 <div class="navbar-left hidden-sm hidden-xs">
-                    <a class="btn navbar-btn btn-sm btn-default" href="https://mafiasi.de" style="margin-top: 10px;">
-                        <i class="fa fa-home"></i> Mafiasi Hub
+                    {% if config.HOME_URL %}
+                    <a class="btn navbar-btn btn-sm btn-default" href="{{ config.HOME_URL }}" style="margin-top: 10px;" target="_blank">
+                        <i class="fa fa-home"></i> {{ config.HOME_TEXT }}
                     </a>
+                    {% endif %}
                     <a class="btn navbar-btn btn-sm btn-default" href="{{ url_for('index') }}" style="margin-top: 10px;">
                         <i class="fa fa-plus"></i> {{ _("Create poll") }}
                     </a>
@@ -67,7 +71,10 @@
                     {% else %}
                     <div class="navbar-right">
                         <span class="nav navbar-text">{{ _("Logged in as %(name)s", name=current_user.displayname) }}</span>
-                        <a class="btn navbar-btn btn-default" href="{{ url_for('logout', next=request.url) }}">{{ _("Logout") }}</a>
+                        {% if config.AUTH_MODE == "password" %}
+                        <a class="btn navbar-btn btn-default" href="{{ url_for('settings') }}"><i class="fa fa-wrench"></i></a>
+                        {% endif %}
+                        <a class="btn navbar-btn btn-default" href="{{ url_for('logout', next=request.url) }}" title="{{ _('Logout') }}"><i class="fa fa-sign-out"></i></a>
                     </div>
                     {% endif %}
                 </div>
