--- a/dudel/templates/base.html
+++ b/dudel/templates/base.html
@@ -31,12 +31,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="/" class="navbar-brand">Dudel</a>
+                    <a href="{{ url_for('index') }}" class="navbar-brand">Dudel</a>
 
-                    <div class="navbar-left visible-sm visible-xs">
-                        <a class="btn navbar-btn btn-sm btn-default" href="https://mafiasi.de" style="margin-top: 10px;">
-                            <i class="fa fa-home"></i> Mafiasi Hub
-                        </a>
                     <a class="btn navbar-btn btn-sm btn-default" href="{{ url_for('index') }}" style="margin-top: 10px;">
                         <i class="fa fa-plus"></i>
                     </a>
@@ -44,9 +40,6 @@
                 </div>
 
                 <div class="navbar-left hidden-sm hidden-xs">
-                    <a class="btn navbar-btn btn-sm btn-default" href="https://mafiasi.de" style="margin-top: 10px;">
-                        <i class="fa fa-home"></i> Mafiasi Hub
-                    </a>
                     <a class="btn navbar-btn btn-sm btn-default" href="{{ url_for('index') }}" style="margin-top: 10px;">
                         <i class="fa fa-plus"></i> {{ _("Create poll") }}
                     </a>
